--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-### Project files ###
-.vscode/settings.json
-
-
 # Created by https://www.gitignore.io/api/osx,linux,python,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=osx,linux,python,windows,visualstudiocode
 
@@ -175,7 +171,7 @@ dmypy.json
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+# !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
