--- a/samples/two_locals/two_locals.yml
+++ b/samples/two_locals/two_locals.yml
@@ -12,22 +12,22 @@ description: Run commands on two servers which are actually localhost
 experiments:
 - name: Experiment 1
   description: Example experiment 1
-  command: echo Running experiment 1 && echo Hello > samples/two_local/hello.log
+  commands: "echo Running experiment 1 && echo Hello > samples/two_locals/exp1.log"
 - name: Experiment 2
   description: Example experiment 2
   commands:
-  - 'echo Running experiment 2'
-  - 'date > samples/two_local/date2.log'
-  - 'echo The time now is $(date)'
+  - "echo Running experiment 2"
+  - "date > samples/two_locals/exp2.log"
+  - "echo The time now is $(date)"
 - name: Experiment 3
   description: Example experiment 3
   commands:
-  - 'echo Running experiment 3'
-  - 'cd samples/two_local'
-  - 'date > date3.log'
-  - 'echo The time now is $(date)'
+  - "echo Running experiment 3"
+  - "cd samples/two_locals"
+  - "date > exp3.log"
+  - "echo The time now is $(date)"
   requirements:
-    cpu_usage: '>=0'
+    cpu_usage: ">=0"
 
 ################################################################################
 # Servers
@@ -36,6 +36,6 @@ experiments:
 # All servers
 servers:
 - name: Localhost 1
-  host: localhost
+  hostname: localhost
 - name: Localhost 2
-  host: localhost
+  hostname: localhost
