--- a/training_noodles/specs/defaults.yml
+++ b/training_noodles/specs/defaults.yml
@@ -33,10 +33,12 @@ after_all_experiments: []
 each_server:
   # Path to the private key on local
   private_key_path: $HOME/.ssh/id_rsa
+  # Port to connect
+  port: 22
   # Username on the server (e.g., 'user1')
   username: $USER
-  # Host of the server (e.g., 'example.com', '123.123.123.123')
-  host: localhost
+  # Hostname of the server (e.g., 'example.com', '123.123.123.123')
+  hostname: localhost
 
 # All servers
 servers: []
@@ -47,13 +49,25 @@ servers: []
 
 # Commands to run to check requirements on servers
 requirements:
-  # Get CPU usage (Reference: https://askubuntu.com/a/941997)
-  cpu_usage: (grep 'cpu ' /proc/stat;sleep 0.1;grep 'cpu ' /proc/stat) | awk -v RS="" '{print ($13-$2+$15-$4)*100/($13-$2+$15-$4+$16-$5)}'
-  # Get memory usage (Reference: https://askubuntu.com/a/941997)
+  # Get average CPU usage over 3 seconds (0-100%) (Reference: https://askubuntu.com/a/941997)
+  cpu_usage:
+  - "(grep 'cpu ' /proc/stat;sleep 0.1;grep 'cpu ' /proc/stat) | awk -v RS='' '{print ($13-$2+$15-$4)*100/($13-$2+$15-$4+$16-$5)}'"
+  - "sleep 1.5"
+  - "(grep 'cpu ' /proc/stat;sleep 0.1;grep 'cpu ' /proc/stat) | awk -v RS='' '{print ($13-$2+$15-$4)*100/($13-$2+$15-$4+$16-$5)}'"
+  - "sleep 1.5"
+  - "(grep 'cpu ' /proc/stat;sleep 0.1;grep 'cpu ' /proc/stat) | awk -v RS='' '{print ($13-$2+$15-$4)*100/($13-$2+$15-$4+$16-$5)}'"
+  # Get memory usage (0-100%) (Reference: https://askubuntu.com/a/941997)
   memory_usage: awk '/MemTotal/{t=$2}/MemAvailable/{a=$2}END{print 100-100*a/t}' /proc/meminfo
-  # Get disk usage (Reference: https://askubuntu.com/a/941997)
+  # Get disk usage (0-100%) (Reference: https://askubuntu.com/a/941997)
   disk_usage: df | awk '/ \/$/{print substr($5, 1, length($5)-1)}'
-  # Get CUDA GPU utilization (Reference: https://gist.github.com/jonatw/9322244)
-  cuda_gpu_utilization: nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits | awk '{s+=$1} END {print s}'
-  # Get CUDA memory utilization (Reference: https://gist.github.com/jonatw/9322244)
-  cuda_memory_utilization: nvidia-smi --query-gpu=utilization.memory --format=csv,noheader,nounits | awk '{s+=$1} END {print s}'
+  # Get CUDA GPU utilization (0-100%) (Reference: https://gist.github.com/jonatw/9322244)
+  cuda_gpu_utilization: nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader,nounits | awk '{s+=$1; n++} END {print s/n}'
+  # Get CUDA memory utilization (0-100%) (Reference: https://gist.github.com/jonatw/9322244)
+  cuda_memory_utilization: nvidia-smi --query-gpu=utilization.memory --format=csv,noheader,nounits | awk '{s+=$1; n++} END {print s/n}'
+
+################################################################################
+# Deployment
+################################################################################
+
+# The interval to deploy each experiment
+deployment_interval: 10
