add round and deployment interval options

--- a/examples/two_locals/spec.yml
+++ b/examples/two_locals/spec.yml
@@ -12,12 +12,13 @@ description: Run commands on two servers which are actually localhost
 experiments:
 - name: Experiment 1
   description: Example experiment 1
-  commands: "echo Running experiment 1 && echo Hello Noodles > examples/two_locals/exp1.log"
+  commands: "echo Running experiment 1 && echo Hello $(hostname) > examples/two_locals/exp1.log"
 - name: Experiment 2
   description: Example experiment 2
   commands:
   - "echo Running experiment 2"
   - "date > examples/two_locals/exp2.log"
+  - "echo The hostname is $(hostname)"
   - "echo The time now is $(date)"
 - name: Experiment 3
   description: Example experiment 3
@@ -25,6 +26,7 @@ experiments:
   - "echo Running experiment 3"
   - "cd examples/two_locals"
   - "date > exp3.log"
+  - "echo The hostname is $(hostname)"
   - "echo The time now is $(date)"
   requirements:
     cpu_usage: ">=0"
@@ -39,3 +41,12 @@ servers:
   hostname: localhost
 - name: Localhost 2
   hostname: localhost
+
+################################################################################
+# Deployment
+################################################################################
+
+# The interval to run each deployment round
+round_interval: 10
+# The interval to deploy each experiment in each round
+deployment_interval: 0
