--- a/examples/two_servers_same_user/spec.yml
+++ b/examples/two_servers_same_user/spec.yml
@@ -12,12 +12,13 @@ description: Run commands on two servers with same user
 experiments:
 - name: Experiment 1
   description: Example experiment 1
-  commands: "echo Running experiment 1 && echo Hello Noodles > ~/exp1.log"
+  commands: "echo Running experiment 1 && echo Hello $(hostname) > ~/exp1.log"
 - name: Experiment 2
   description: Example experiment 2
   commands:
   - "echo Running experiment 2"
   - "date > ~/exp2.log"
+  - "echo The hostname is $(hostname)"
   - "echo The time now is $(date)"
 - name: Experiment 3
   description: Example experiment 3
@@ -25,6 +26,7 @@ experiments:
   - "echo Running experiment 3"
   - "cd ~"
   - "date > exp3.log"
+  - "echo The hostname is $(hostname)"
   - "echo The time now is $(date)"
   requirements:
     cpu_usage: ">=0"
@@ -48,3 +50,12 @@ servers:
 - name: Server 2
   # Hostname of the server (e.g., "server1.example.com", "123.123.123.123")
   hostname: server2
+
+################################################################################
+# Deployment
+################################################################################
+
+# The interval to run each deployment round
+round_interval: 10
+# The interval to deploy each experiment in each round
+deployment_interval: 0
