--- a/training_noodles/specs/defaults.yml
+++ b/training_noodles/specs/defaults.yml
@@ -69,5 +69,7 @@ requirements:
 # Deployment
 ################################################################################
 
-# The interval to deploy each experiment
-deployment_interval: 10
+# The interval to run each deployment round
+round_interval: 10
+# The interval to deploy each experiment in each round
+deployment_interval: 0
