--- a/examples/two_locals/spec.yml
+++ b/examples/two_locals/spec.yml
@@ -5,32 +5,33 @@ name: Two locals
 description: Run commands on two servers which are actually localhost
 
 ################################################################################
-# Command Packets
+# Experiments
 ################################################################################
 
-# Commands to run on localhosts, use "noodles run <spec_path>" to run all the
-# commands
-run:
-  all:
-  - name: Experiment 1
-    description: Example experiment 1
-    commands: "echo Running experiment 1 && echo Hello $(hostname) > examples/two_locals/exp1.log"
-  - name: Experiment 2
-    description: Example experiment 2
-    commands:
+experiments:
+- name: Experiment 1
+  description: Example experiment 1
+  commands:
+    run: "echo Running experiment 1 && echo Hello $(hostname) > examples/two_locals/exp1.log"
+- name: Experiment 2
+  description: Example experiment 2
+  commands:
+    run:
     - "echo Running experiment 2"
     - "date > examples/two_locals/exp2.log"
     - "echo The hostname is $(hostname)"
     - "echo The time now is $(date)"
-  - name: Experiment 3
-    description: Example experiment 3
-    commands:
+- name: Experiment 3
+  description: Example experiment 3
+  commands:
+    run:
     - "echo Running experiment 3"
     - "cd examples/two_locals"
     - "date > exp3.log"
     - "echo The hostname is $(hostname)"
     - "echo The time now is $(date)"
-    requirements:
+  requirements:
+    run:
       cpu_usage: ">=0"
 
 ################################################################################
