--- a/examples/file_transfer/clean.yml
+++ b/examples/file_transfer/clean.yml
@@ -8,37 +8,37 @@ description: Clean the uploaded scripts and log files
 # Experiments
 ################################################################################
 
-# Let "commands" and "requirements" be default when main experiments don't
-# specify them
-each_experiment:
-  commands:
-    clean:
-    - "remote:rm -f ~/$LOG"
-    - "remote:rm -f ~/$SCRIPT"
-
-# Main experiments go here
 experiments:
 - name: Clean experiment 1
   description: Clean the script and log on server
   envs:
     SCRIPT: remote_experiment1.sh
     LOG: exp1_result.log
+  commands:
+    clean:
+    - "remote:rm -f ~/$LOG"
+    - "remote:rm -f ~/$SCRIPT"
   requirements:
     clean:
     - find_experiment: "==1"
+
 - name: Clean experiment 2
   description: Clean the script and log on server
   envs:
     SCRIPT: remote_experiment2.sh
     LOG: exp2_result.log
+  commands:
+    clean:
+    - "remote:rm -f ~/$LOG"
+    - "remote:rm -f ~/$SCRIPT"
   requirements:
     clean:
     - find_experiment: "==1"
+
 - name: Clean local results
   description: Clean downloaded log files
   envs:
     LOCAL_DIR: examples/file_transfer
-  # Override "commands" in "each_experiment"
   commands:
     clean:
     - "local:rm -f $LOCAL_DIR/*.log"
@@ -47,8 +47,8 @@ experiments:
 # Servers
 ################################################################################
 
-# Applies to the server spec if not specified
-each_server:
+# The default properties for each server
+server_default:
   # Path to the private key on local
   private_key_path: $HOME/.ssh/id_rsa
   # Username on the server (e.g., 'user1')
